# Veil-FHE

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  stale.yml  wheels.yml
architecture/: index.html
benchmarks/: README.md  index.html  run_benchmarks.py
cmake/: FindOrFetchOpenFHE.cmake
docs/: architecture.md  benchmarks.md  faq.md  getting-started.md  index.md  supported-ops.md  threat-model.md
faq/: index.html
getting-started/: index.html
search/: search_index.json
src/: backend.cpp
supported-ops/: index.html
tests/: test_backend.py  test_ingest.py  test_models.py  test_ops.py  test_transform.py
threat-model/: index.html
veil/: __init__.py  api.py  calibration.py  errors.py  ingest.py  ir.py  model.py  params.py  transform.py
veil/ops/: __init__.py  activation.py  conv.py  elementwise.py  linear.py
