[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "veil-fhe"
version = "0.0.0"
description = "An educational, from-scratch FHE inference compiler built on CKKS / OpenFHE."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Harikeshav R" }]
keywords = ["fhe", "homomorphic-encryption", "ckks", "openfhe", "privacy", "ml-inference", "onnx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime dependencies (installed for every user of the library).
dependencies = [
    "torch>=2.2",
    "onnx>=1.16",
    "onnxsim>=0.4.36",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/Harikeshav-R/veil-fhe"
Documentation = "https://github.com/Harikeshav-R/veil-fhe"
Repository = "https://github.com/Harikeshav-R/veil-fhe"
Issues = "https://github.com/Harikeshav-R/veil-fhe/issues"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735). These are DEV-only and never published to PyPI;
# they are not installed by `pip install veil-fhe`. uv manages them. The `dev`
# group is synced by default with `uv sync`. (Distinct from [project] runtime
# deps and from extras / optional-dependencies, which we intentionally don't use
# here because none of this tooling is a user-facing runtime feature.)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
bench = [
    "pandas>=2.2",
    "rich>=13.7",
]

# ---------------------------------------------------------------------------
# uv configuration.
# ---------------------------------------------------------------------------
[tool.uv]
# `dev` is synced by default; `docs`/`bench` are opt-in via `uv sync --group ...`.
default-groups = ["dev"]
# Build deps (scikit-build-core, pybind11, cmake, ninja) are light, so the
# default PEP 517 build isolation is fine. For the fast editable-rebuild loop
# against a system OpenFHE, see CONTRIBUTING.md.

# ---------------------------------------------------------------------------
# scikit-build-core: builds the veil_backend pybind11 extension via CMake.
# uv drives this backend; it does NOT replace it.
# ---------------------------------------------------------------------------
[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["veil"]
cmake.version = ">=3.24"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
# Default to the hermetic FetchContent build. Override per-install with:
#   uv pip install -e . -C cmake.define.VEIL_USE_SYSTEM_OPENFHE=ON
# or globally for `uv sync` via:  CMAKE_ARGS="-DVEIL_USE_SYSTEM_OPENFHE=ON" uv sync
VEIL_USE_SYSTEM_OPENFHE = "OFF"
VEIL_WITH_HEXL = "OFF"
VEIL_BUILD_CXX_TESTS = "OFF"
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

# ---------------------------------------------------------------------------
# Ruff: linter + formatter.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["veil", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.isort]
known-first-party = ["veil"]

# ---------------------------------------------------------------------------
# mypy: strict typing on the Python compiler.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["veil"]

[[tool.mypy.overrides]]
module = ["onnx.*", "onnxsim.*", "veil_backend.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end encrypt/forward/decrypt tests",
]

[tool.coverage.run]
source = ["veil"]
branch = true

# ---------------------------------------------------------------------------
# Pyrefly / Neovim LSP: automatically pick up the uv virtual environment.
# ---------------------------------------------------------------------------
[tool.pyrefly]
venvPath = "."
venv = ".venv"
